Fix menu alignment.

--- a/recipes/src/main/resources/static/styles/screen.css
+++ b/recipes/src/main/resources/static/styles/screen.css
@@ -122,3 +122,7 @@ input {
 .no-wrap {
 	white-space: nowrap;
 }
+
+.padded-sides {
+	padding: 0 20px 0 20px;
+}
